hphp/hack/test/typecheck/akempty_promotion_8.php.exp
File "akempty_promotion_8.php", line 15, characters 5-6:
Invalid argument (Typing[4110])
File "akempty_promotion_8.php", line 18, characters 12-24:
This is an array (used like a vector)
File "akempty_promotion_8.php", line 12, characters 5-9:
It is incompatible with an array (used like a hashtable) because it is used as map here
